syntax = "proto3";
package pb;

// protoc --go_out=plugins=grpc:. addressbook.proto

message Person {
  string name = 1;
  int32 id = 2;  // Unique ID number for this person.
  string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;
}

// Our address book file is just one of these.
message AddressBook {
  repeated Person people = 1;
}

service AddressBookService {
  rpc List (Empty) returns (ListReply) {}
  rpc Create (CreateRequest) returns (CreateReply) {}
  rpc Read (ReadRequest) returns (ReadReply) {}
  rpc Update (UpdateRequest) returns (UpdateReply) {}
  rpc Delete (DeleteRequest) returns (DeleteReply) {}
}

message Empty {
}

message ListReply {
  repeated Person people = 1;
}

message CreateRequest {
  Person person = 1;
}

message CreateReply {
  int32 id = 1;
}

message ReadRequest {
  int32 id = 1;
}

message ReadReply {
  Person person = 1;
}

message UpdateRequest {
  Person person = 1;
}

message UpdateReply {
  bool success = 1;
}

message DeleteRequest {
  int32 id = 1;
}

message DeleteReply {
  bool success = 1;
}
